Se realizan fixes Problemas de logueo via azure despues de su despliegue en aws , se añaden validaciones de scopes y de cors